--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,11 +14,11 @@
         <form th:action="@{/login}" method="post">
             <div><label> User Name : <input type="text" name="username"/> </label></div>
             <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
+            <div><input type="submit" value="Log In"/></div>
         </form>
         <div>
             <form th:action="@{/login/registerNewUser}" method="get">
-                <input type="submit" value="Registrovat"/>
+                <input type="submit" value="Register"/>
             </form>
         </div>
     </body>
