--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.80.0">
-    <title>Carousel Template · Bootstrap v4.6</title>
+    <title>Reported - Home</title>
 
 
 
@@ -18,7 +18,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.6.0/css/bootstrap.min.css}" type="text/css"/>
     <!-- Custom styles for this template -->
-    <link th:src="@{/static/css/carousel.css}" rel="stylesheet" type="text/css"/>
+    <link th:src="@{/static/css/landingPage/carousel.css}" rel="stylesheet" type="text/css"/>
 
 
     <style>
