--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,10 +61,10 @@
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
             </ul>
-            <form class="form-inline mt-2 mt-md-0" th:action="@{/home/loginuser}" method="get">
+            <form class="form-inline mt-2 mt-md-0" th:action="@{/loginuser}" method="get">
                 <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Log In</button>
             </form>
-            <form class="form-inline mt-2 mt-md-0" th:action="@{/home/registeruser}" method="get">
+            <form class="form-inline mt-2 mt-md-0" th:action="@{/registeruser}" method="get">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
             </form>
         </div>
