--- a/src/main/resources/templates/project/allProjects.html
+++ b/src/main/resources/templates/project/allProjects.html
@@ -26,12 +26,11 @@
             </thead>
             <tbody>
             <tr th:each="project : ${projects}">
-                <td th:text="${project.id}"></td>
                 <td th:text="${project.name}"></td>
                 <td th:text="${project.description}"></td>
                 <td th:text="${project.owner}"></td>
-                <td><a th:href="@{/edit/{id}(id=${project.id})}">Edit</a></td>
-                <td><a th:href="@{/delete/{id}(id=${project.id})}">Delete</a></td>
+                <!--<td><a th:href="@{/edit/{id}(id=${project.id})}">Edit</a></td>
+                <td><a th:href="@{/delete/{id}(id=${project.id})}">Delete</a></td>-->
             </tr>
             </tbody>
         </table>
