Oprava pridavani projektu, priprava CRUD pro celou Project class.

--- a/src/main/resources/templates/project/addProject.html
+++ b/src/main/resources/templates/project/addProject.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     ADD project
-    <form th:action="@{/project/addProject}" th:object="${project}" method="post">
+    <form th:action="@{/project/add}" th:object="${project}" method="post">
 
         <div class="form-group">
             <label >Name:</label>
