--- a/src/main/resources/templates/project/editProject.html
+++ b/src/main/resources/templates/project/editProject.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  layout:decorate="~{dashboard}"
+       xmlns:th="https://www.thymeleaf.org"
+       xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
+       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<div class="container">
+    Edit project
+    <form th:action="@{/project/edit}" th:object="${project}" method="post">
 
+        <div class="form-group">
+            <label >Name:</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="id" >
+        </div>
+        <div class="form-group">
+            <label >Description:</label>
+            <input type="text" th:field="*{description}" class="form-control" placeholder="id" >
+        </div>
+        <div class="form-group">
+            <label >Owner:</label>
+            <input type="text" th:field="*{owner}" class="form-control" placeholder="id" >
+        </div>
+        <button type="submit" class="btn btn-primary">Edit</button>
+    </form>
+</div>
 </body>
 </html>
