--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -82,7 +82,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/task/all">
+                        <a class="nav-link" href="/tasks/all">
                             <span data-feather="file"></span>
                             All Tasks
                         </a>
