--- a/src/main/resources/templates/task/addTask.html
+++ b/src/main/resources/templates/task/addTask.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  layout:decorate="~{dashboard}"
+       xmlns:th="https://www.thymeleaf.org"
+       xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
+       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<div class="container">
+    ADD project
+    <form th:action="@{/tasks/add}" th:object="${task}" method="post">
 
+        <div class="form-group">
+            <label >Name:</label>
+            <input type="text" th:field="*{taskName}" class="form-control" placeholder="id" th:name="taskName">
+        </div>
+        <div class="form-group">
+            <label >Description:</label>
+            <input type="text" th:field="*{description}" class="form-control" placeholder="id" th:name="description">
+        </div>
+        <div class="form-group">
+            <label >Start date:</label>
+            <input type="date" th:field="*{startDate}" class="form-control" placeholder="id" >
+        </div>
+        <div class="form-group">
+            <label >End date:</label>
+            <input type="date" th:field="*{endDate}" class="form-control" placeholder="id" >
+        </div>
+        <div class="form-group">
+            <label >Owner:</label>
+            <input type="text" readonly class="form-control" th:value="*{projectId}" placeholder="id" th:name="projectId">
+        </div>
+        <button type="submit" class="btn btn-primary">Add new task</button>
+    </form>
+</div>
 </body>
 </html>
