--- a/src/main/resources/templates/task/editTask.html
+++ b/src/main/resources/templates/task/editTask.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  layout:decorate="~{dashboard}"
+       xmlns:th="https://www.thymeleaf.org"
+       xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
+       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<div class="container">
+    Edit project
+    <form th:action="@{/tasks/update/{id}(id=${task.id})}" th:object="${task}" method="post">
+        <div class="form-group">
+            <input type="text" th:value="*{id}" class="form-control" readonly="readonly" >
+        </div>
+        <div class="form-group">
+            <label >Name:</label>
+            <input type="text" th:field="*{taskName}" class="form-control">
+        </div>
 
+        <div class="form-group">
+            <label >Description:</label>
+            <input type="text" th:field="*{description}" class="form-control" >
+        </div>
+        <div class="form-group">
+            <label >Owner:</label>
+            <input type="text" th:field="*{projectId}" class="form-control" >
+        </div>
+        <button type="submit" class="btn btn-primary">Edit</button>
+    </form>
+</div>
 </body>
 </html>
