--- a/src/main/resources/templates/header_dash.html
+++ b/src/main/resources/templates/header_dash.html
@@ -1,11 +1,47 @@
 <header  xmlns:th="https://www.thymeleaf.org"
          th:fragment="header_dash"
          xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
         <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
                 <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="/dashboard">Dashboard</a>
                 <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                 </button>
+                <div id="digital-clock" class="btn btn-warning my-2 my-sm-0"></div>
+                <script>
+                        function getDateTime() {
+                                var now     = new Date();
+                                var year    = now.getFullYear();
+                                var month   = now.getMonth()+1;
+                                var day     = now.getDate();
+                                var hour    = now.getHours();
+                                var minute  = now.getMinutes();
+                                var second  = now.getSeconds();
+                                if(month.toString().length == 1) {
+                                        month = '0'+month;
+                                }
+                                if(day.toString().length == 1) {
+                                        day = '0'+day;
+                                }
+                                if(hour.toString().length == 1) {
+                                        hour = '0'+hour;
+                                }
+                                if(minute.toString().length == 1) {
+                                        minute = '0'+minute;
+                                }
+                                if(second.toString().length == 1) {
+                                        second = '0'+second;
+                                }
+                                var dateTime = year+'/'+month+'/'+day+' '+hour+':'+minute+':'+second;
+                                return dateTime;
+                        }
+
+                        // example usage: realtime clock
+                        setInterval(function(){
+                                currentTime = getDateTime();
+                                document.getElementById("digital-clock").innerHTML = currentTime;
+                        }, 100);
+                </script>
 
                 <ul class="navbar-nav px-3">
                         <li class="nav-item text-nowrap">
