--- a/src/main/resources/templates/project/editProject.html
+++ b/src/main/resources/templates/project/editProject.html
@@ -24,6 +24,18 @@
             <input type="text" th:field="*{description}" class="form-control" >
         </div>
         <div class="form-group">
+            <label >Start date:</label>
+            <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="id" >
+        </div>
+        <div class="form-group">
+            <label >End date:</label>
+            <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="id" >
+        </div>
+        <div class="form-group">
+            <label >Estimated hours:</label>
+            <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="id" >
+        </div>
+        <div class="form-group">
             <label >Owner:</label>
             <input type="text" th:field="*{ownerId}" class="form-control" >
         </div>
