--- a/src/main/resources/templates/task/addTask.html
+++ b/src/main/resources/templates/task/addTask.html
@@ -22,11 +22,11 @@
         </div>
         <div class="form-group">
             <label >Start date:</label>
-            <input type="date" th:field="*{startDate}" class="form-control" placeholder="id" >
+            <input type="datetime-local" th:field="*{startDate}" class="form-control" placeholder="date of start" th:name="startDate">
         </div>
         <div class="form-group">
             <label >End date:</label>
-            <input type="date" th:field="*{endDate}" class="form-control" placeholder="id" >
+            <input type="datetime-local" th:field="*{endDate}" class="form-control" placeholder="date of end" th:name="endDate">
         </div>
         <div class="form-group">
             <label >Owner:</label>
