--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -10,156 +10,41 @@
 
 <div layout:fragment="content">
     <div class="container">
-    <!-- Modal New Project-->
-    <div class="modal fade" id="newProjectModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">New Project</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <form th:action="@{/}" method="post">
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Project name</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name of project">
-                        </div>
-                        <div class="form-group row">
-                            <label for="staticOwner" class="col-sm-2 col-form-label">Owner</label>
-                            <div class="col-sm-10">
-                                <input type="text" readonly class="form-control-plaintext" id="staticOwner" value="Karel Karel">
+        <div class="row" style="margin: 30px">
+            <div class="col">Welcome there u fag</div>
+            <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Pridat Projekt</a></div>
+            <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-success"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Pridat Zakaznika</a></div>
+            <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-warning"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Vytvorit skupinu keltu</a></div>
+
+        </div>
+
+        <div th:switch="${projects}">
+            <h2 th:case="null">No projects yet!</h2>
+            <div th:case="*">
+                <div class="row mb-2">
+                    <div class="col-md-6" th:each="project : ${projects}">
+                        <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                            <div class="col p-4 d-flex flex-column position-static">
+                                <strong class="d-inline-block mb-2 text-primary">#Projekt</strong>
+                                <h3 class="mb-0" th:text="${project.name}"></h3>
+                                <div class="mb-1 text-muted" th:text="${project.projectStart.toLocalDate()}"></div>
+                                <p class="card-text mb-auto" th:text="${project.description}"></p>
+<!--                                <a href="#" class="stretched-link">Show me this shit</a>-->
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                                </div>
+                                <span th:text="${projectsProgress.values()}"></span>
+                            </div>
+
+                            <div class="col-auto d-none d-lg-block">
+                                <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="projectDescription">Project description</label>
-                            <textarea class="form-control" id="projectDescription" rows="3"></textarea>
-                        </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button class="btn btn-primary" th:type="submit">Add New Project</button>
-                    </div>
-                </form>
             </div>
         </div>
-    </div>
-
-    <!-- Modal New Task-->
-    <div class="modal fade" id="newTaskModal" tabindex="-1" role="dialog" aria-labelledby="taskModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="taskModalCenterTitle">New Task</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <form th:action="@{/}" method="post">
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label for="taskFormControlInput1">Task name</label>
-                            <input type="email" class="form-control" id="taskFormControlInput1" placeholder="Name of task">
-                        </div>
-                        <div class="form-group">
-                            <label for="taskFormControlSelect1">Select project</label>
-                            <select class="form-control" id="taskFormControlSelect1">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="taskDescription">Task description</label>
-                            <textarea class="form-control" id="taskDescription" rows="3"></textarea>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button class="btn btn-primary" th:type="submit">Add New task</button>
-                    </div>
-                </form>
-            </div>
         </div>
-    </div>
-
-    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-        <nav class="navbar navbar-expand-lg ">
-            <div class="btn-toolbar mb-2 mb-md-0">
-                <div class="btn-group mr-2">
-                    <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#newProjectModal">
-                        New Project
-                    </button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#newTaskModal">
-                        New Task
-                    </button>
-                </div>
-            </div>
-        </nav>
-    </main>
-    <div class="row mb-2">
-        <div class="col-md-6">
-            <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-primary">Project #1</strong>
-                    <h3 class="mb-0">Subject</h3>
-                    <div class="mb-1 text-muted">Nov 12</div>
-                    <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="stretched-link">Show me this shit</a>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                    </div>
-                </div>
-
-                <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-success">Project #2</strong>
-                    <h3 class="mb-0">Blyat Cyka</h3>
-                    <div class="mb-1 text-muted">Nov 11</div>
-                    <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="stretched-link">Show me this shit</a>
-                    <div class="progress" style="height: 1px;">
-                        <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                </div>
-                <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                </div>
-
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                <div class="col p-4 d-flex flex-column position-static">
-                    <strong class="d-inline-block mb-2 text-success">Project #2</strong>
-                    <h3 class="mb-0">Blyat Cyka</h3>
-                    <div class="mb-1 text-muted">Nov 11</div>
-                    <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="stretched-link">Show me this shit</a>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                    </div>
-                </div>
-                <div class="col-auto d-none d-lg-block">
-                    <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-                </div>
-
-            </div>
-        </div>
-    </div>
-    </div>
 </div>
 </body>
 </html>
