--- a/src/main/resources/templates/layout_dash.html
+++ b/src/main/resources/templates/layout_dash.html
@@ -55,7 +55,7 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <p class="nav-link">
-                            <strong>User: <span th:text="${user.username}"></span></strong>
+                            User: <strong><span th:text="${user.username}"></span></strong> ( <small th:text="${user.getAuthorities()}"></small> )
                         </p>
                     </li>
                     <li class="nav-item">
