--- a/src/main/resources/templates/project/addProject.html
+++ b/src/main/resources/templates/project/addProject.html
@@ -9,7 +9,7 @@
 <body>
 
 <div layout:fragment="content" class="container">
-    ADD project
+    <h2>Projects</h2>
     <form th:action="@{/project/add}" th:object="${project}" method="post">
 
         <div class="form-group">
@@ -22,15 +22,15 @@
         </div>
         <div class="form-group">
             <label >Start date:</label>
-            <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="id" >
+            <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="Start" >
         </div>
         <div class="form-group">
             <label >End date:</label>
-            <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="id" >
+            <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="End" >
         </div>
         <div class="form-group">
             <label >Estimated hours:</label>
-            <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="id" >
+            <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="EstimatedHours" >
         </div>
         <div class="form-group">
             <label >Owner:</label>
