--- a/src/main/resources/templates/project/addProject.html
+++ b/src/main/resources/templates/project/addProject.html
@@ -33,6 +33,10 @@
             <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="EstimatedHours" >
         </div>
         <div class="form-group">
+            <label >Hour rate:</label>
+            <input type="number" th:field="*{hourRate}" class="form-control" placeholder="Hour rate" >
+        </div>
+        <div class="form-group">
             <label >Owner:</label>
             <input type="text" readonly class="form-control" th:value="*{ownerId}" placeholder="id" name="ownerId">
         </div>
