--- a/src/main/resources/templates/project/editProject.html
+++ b/src/main/resources/templates/project/editProject.html
@@ -37,6 +37,10 @@
         </div>
         <div class="form-group">
             <label >Owner:</label>
+            <input type="text" readonly class="form-control" th:value="*{ownerId}" placeholder="id" name="ownerId">
+        </div>
+        <div class="form-group">
+            <label >Owner:</label>
             <input type="text" th:field="*{ownerId}" class="form-control" >
         </div>
         <button type="submit" class="btn btn-primary">Edit</button>
