--- a/src/main/resources/templates/task/editTask.html
+++ b/src/main/resources/templates/task/editTask.html
@@ -32,6 +32,10 @@
             <input type="datetime-local" th:field="*{endDate}" class="form-control" placeholder="date of end" th:name="endDate">
         </div>
         <div class="form-group">
+            <label >Hour rate:</label>
+            <input type="number" th:field="*{hourRate}" class="form-control" placeholder="Hour rate" >
+        </div>
+        <div class="form-group">
             <label >Owner:</label>
             <input type="text" th:field="*{projectId}" class="form-control" >
         </div>
