--- a/src/main/resources/templates/project/editProject.html
+++ b/src/main/resources/templates/project/editProject.html
@@ -36,8 +36,8 @@
             <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="id" >
         </div>
         <div class="form-group">
-            <label >Owner:</label>
-            <input type="text" readonly class="form-control" th:value="*{ownerId}" placeholder="id" name="ownerId">
+            <label >Hour rate:</label>
+            <input type="number" th:field="*{hourRate}" class="form-control" placeholder="Hour rate" >
         </div>
         <div class="form-group">
             <label >Owner:</label>
