Project class final View, CRUD

--- a/src/main/resources/templates/project/all.html
+++ b/src/main/resources/templates/project/all.html
@@ -16,15 +16,17 @@
     <div th:switch="${projects}">
         <h2 th:case="null">No projects yet!</h2>
         <div th:case="*">
-            <h2>Projects</h2><p><a th:href="@{'/project/ad'}" class="btn btn-outline-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Add a new project</a></p>
+            <h2 style="margin-top: 30px">Projects</h2><p><a th:href="@{'/project/ad'}" class="btn btn-outline-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Add a new project</a></p>
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th>ID</th>
+<!--                    <th>ID</th>-->
                     <th>Name</th>
+                    <th>ProjectStart</th>
                     <th>Description</th>
-                    <th>Owner</th>
+<!--                    <th>Owner</th>-->
                     <th>Add task</th>
+                    <th>Budget</th>
                     <th>Info</th>
                     <th>Edit</th>
                     <th>Delete</th>
@@ -32,12 +34,14 @@
                 </thead>
                 <tbody>
                 <tr th:each="project : ${projects}">
-                    <td th:text="${project.getId()}"></td>
+<!--                    <td th:text="${project.getId()}"></td>-->
                     <td th:text="${project.name}"></td>
+                    <td th:text="${project.projectStart.toLocalDate()}"></td>
                     <td th:text="${project.description}"></td>
-                    <td th:text="${project.ownerId}"></td>
+<!--                    <td th:text="${project.ownerId}"></td>-->
                     <td><a th:href="@{/tasks/ad/{id}(id=${project.getId()})}"><i class="bi-plus-circle" style="font-size: 1rem; color: forestgreen;"></i></a></td>
-                    <td><a href="#"><i class="bi-info-circle" style="font-size: 1rem; color: cornflowerblue;"></i></a></td>
+                    <td th:text="${project.estimatedHours} + 'h'"></td>
+                    <td><a th:href="@{/project/detail/{id}(id=${project.getId()})}"><i class="bi-info-circle" style="font-size: 1rem; color: cornflowerblue;"></i></a></td>
                     <td><a th:href="@{/project/edit/{id}(id=${project.getId()})}"><i class="bi-pencil" style="font-size: 1rem; color: forestgreen;"></i></a></td>
                     <td><a th:href="@{/project/delete/{id}(id=${project.getId()})}"><i class="bi-x-circle-fill" style="font-size: 1rem; color: darkred;"></i></a></td>
                 </tr>
@@ -47,22 +51,4 @@
     </div>
 </div>
 </body>
-<!--<body>-->
-<!--<div layout:fragment="content">-->
-<!--    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">-->
-<!--        <h1 class="h2">View 1</h1>-->
-<!--        <div class="btn-toolbar mb-2 mb-md-0">-->
-<!--            <div class="btn-group mr-2">-->
-<!--                <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>-->
-<!--                <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>-->
-<!--            </div>-->
-<!--            <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">-->
-<!--                <span data-feather="calendar"></span>-->
-<!--                This week-->
-<!--            </button>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--</body>-->
 </html>
