--- a/src/main/resources/templates/project/add.html
+++ b/src/main/resources/templates/project/add.html
@@ -9,41 +9,35 @@
 <body>
 
 <div layout:fragment="content" class="container">
-    Edit project
-    <form th:action="@{/project/update/{id}(id=${project.id})}" th:object="${project}" method="post">
-        <div class="form-group">
-            <input type="text" th:value="*{id}" class="form-control" readonly="readonly" >
-        </div>
-        <div class="form-group">
-            <label >Name:</label>
-            <input type="text" th:field="*{name}" class="form-control">
-        </div>
+    <h2 style="margin-top: 30px">Novy Projekt</h2><hr>
+    <form th:action="@{/project/add}" th:object="${project}" method="post">
 
         <div class="form-group">
+            <label >Name:</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="Name" >
+        </div>
+        <div class="form-group">
             <label >Description:</label>
-            <input type="text" th:field="*{description}" class="form-control" >
+            <input type="text" th:field="*{description}" class="form-control" placeholder="Description" >
         </div>
         <div class="form-group">
             <label >Start date:</label>
-            <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="id" >
+            <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="Start" >
         </div>
         <div class="form-group">
             <label >End date:</label>
-            <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="id" >
+            <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="End" >
         </div>
         <div class="form-group">
             <label >Estimated hours:</label>
-            <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="id" >
+            <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="EstimatedHours" >
         </div>
         <div class="form-group">
             <label >Hour rate:</label>
             <input type="number" th:field="*{hourRate}" class="form-control" placeholder="Hour rate" >
         </div>
-        <div class="form-group">
-            <label >Owner:</label>
-            <input type="text" th:field="*{ownerId}" class="form-control" >
-        </div>
-        <button type="submit" class="btn btn-primary">Edit</button>
+        <input type="hidden" readonly class="form-control" th:value="*{ownerId}" placeholder="id" name="ownerId">
+        <button type="submit" class="btn btn-primary">Zalozit projekt</button>
     </form>
 </div>
 </body>
