address, client, invoice, generating pdf

--- a/src/main/resources/templates/layout_dash.html
+++ b/src/main/resources/templates/layout_dash.html
@@ -71,12 +71,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            My Groups
+                        <a class="nav-link" href="/invoice/all">
+                            My invoices
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/client/all">
                             My Clients
                         </a>
                     </li>
