Task class final View, CRUD

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -26,10 +26,10 @@
                         <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                             <div class="col p-4 d-flex flex-column position-static">
                                 <strong class="d-inline-block mb-2 text-primary" th:text="'~' + ${project.key.estimatedHours} + ' hours'"></strong>
-                                <h3 class="mb-0" th:text="${project.key.name}"></h3>
+                                <a th:href="@{/project/detail/{id}(id=${project.key.getId()})}"><h3 class="mb-0" th:text="${project.key.name}"></h3></a>
                                 <div class="mb-1 text-muted" th:text="${project.key.projectStart.toLocalDate()}"></div>
                                 <p class="card-text mb-auto" th:text="${project.key.description}"></p>
-<!--                                <a href="#" class="stretched-link">Show me this shit</a>-->
+                                <a th:href="@{/project/detail/{id}(id=${project.key.getId()})}" class="stretched-link">Project detail</a>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" th:attr="aria-valuenow=${progress}" th:style="'width:' + ${progress} + '%;'"  th:text="${progress} + ' %'" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
@@ -44,8 +44,6 @@
             </div>
         </div>
         </div>
-
 </div>
-
 </body>
 </html>
