--- a/src/main/resources/templates/layout_dash.html
+++ b/src/main/resources/templates/layout_dash.html
@@ -65,7 +65,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/tasks/all">
+                        <a class="nav-link" href="/task/all">
                             <span data-feather="file"></span>
                             All Tasks
                         </a>
