--- a/src/main/resources/templates/project/edit.html
+++ b/src/main/resources/templates/project/edit.html
@@ -16,28 +16,28 @@
 <!--        </div>-->
         <input type="hidden" th:value="*{id}" class="form-control" readonly="readonly" >
         <div class="form-group">
-            <label >Name:</label>
-            <input type="text" th:field="*{name}" class="form-control">
+            <label>Name:</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="Name">
         </div>
 
         <div class="form-group">
-            <label >Description:</label>
-            <input type="text" th:field="*{description}" class="form-control" >
+            <label>Description:</label>
+            <input type="text" th:field="*{description}" class="form-control" placeholder="Description">
         </div>
         <div class="form-group">
-            <label >Start date:</label>
-            <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="id" >
+            <label>Start date:</label>
+            <input type="datetime-local" th:field="*{projectStart}" class="form-control" placeholder="Start date">
         </div>
         <div class="form-group">
-            <label >End date:</label>
-            <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="id" >
+            <label>End date:</label>
+            <input type="datetime-local" th:field="*{projectEnd}" class="form-control" placeholder="End date" >
         </div>
         <div class="form-group">
-            <label >Estimated hours:</label>
-            <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="id" >
+            <label>Estimated hours:</label>
+            <input type="number" th:field="*{estimatedHours}" class="form-control" placeholder="Estimated hours" >
         </div>
         <div class="form-group">
-            <label >Hour rate:</label>
+            <label>Hour rate:</label>
             <input type="number" th:field="*{hourRate}" class="form-control" placeholder="Hour rate" >
         </div>
         <input type="hidden" th:field="*{ownerId}" class="form-control" >
