--- a/src/main/resources/templates/address/editAddress.html
+++ b/src/main/resources/templates/address/editAddress.html
@@ -10,7 +10,7 @@
 
 <div layout:fragment="content" class="container">
     <h2><span th:text="${client.companyName}"></span> Address</h2>
-    <form th:action="@{/address/add}" th:object="${address}" method="post">
+    <form th:action="@{/address/update/{id}(id=${address.id})}" th:object="${address}" method="post">
 
         <div class="form-group">
             <label >Street:</label>
@@ -25,9 +25,9 @@
             <input type="text" th:field="*{postCode}" class="form-control" placeholder="Post code" >
         </div>
         <div class="form-group">
-            <input type="hidden" readonly class="form-control" th:value="*{ownerId}"name="ownerId">
+            <input type="hidden" readonly class="form-control" th:value="*{ownerId}" name="ownerId">
         </div>
-        <button type="submit" class="btn btn-primary">Add new address</button>
+        <button type="submit" class="btn btn-primary">Edit address</button>
     </form>
 </div>
 </body>
