--- a/src/main/resources/templates/invoice/allInvoices.html
+++ b/src/main/resources/templates/invoice/allInvoices.html
@@ -37,7 +37,7 @@
                     <td th:text="${invoice.client.getCompanyName()}"></td>
                     <td th:text="${invoice.dueBy}"></td>
                     <td th:text="${invoice.created}"></td>
-                    <td><a th:href="@{/invoice/pdf/{id}(id=${invoice.getId()})}"><i class="bi-pencil" style="font-size: 1rem; color: forestgreen;"></i></a></td>
+                    <td><a th:href="@{/invoice/pdf/{id}(id=${invoice.getId()})}" th:target="_blank"><i class="bi-pencil" style="font-size: 1rem; color: forestgreen;"></i></a></td>
                     <td><a th:href="@{/invoice/edit/{id}(id=${invoice.getId()})}"><i class="bi-pencil" style="font-size: 1rem; color: forestgreen;"></i></a></td>
                     <td><a th:href="@{/invoice/delete/{id}(id=${invoice.getId()})}"><i class="bi-x-circle-fill" style="font-size: 1rem; color: darkred;"></i></a></td>
                 </tr>
