--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -11,7 +11,7 @@
 <div layout:fragment="content">
     <div class="container">
         <div class="row" style="margin: 30px">
-            <div class="col">Welcome there u fag</div>
+            <div class="col">Hi there!</div>
             <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-primary"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Pridat Projekt</a></div>
             <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-success"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Pridat Zakaznika</a></div>
             <div class="col"><a th:href="@{'/project/ad'}" class="btn btn-warning"><i class="bi bi-folder-plus" style="margin-right: 5px"></i>Vytvorit skupinu</a></div>
