--- a/src/main/resources/templates/project/detail.html
+++ b/src/main/resources/templates/project/detail.html
@@ -53,8 +53,11 @@
         <a th:href="@{/project/delete/{id}(id=${project.getId()})}" class="btn btn-outline-danger">Smazat projekt</a>
         <a href="/project/all" class="btn btn-success">Zpet</a>
     </div>
-    <div th:switch="${tasks}">
-        <h2 th:case="null">No tasks yet!</h2>
+    <div th:switch="${#lists.size(tasks)}">
+        <div th:case="0">
+            <h2 style="margin-top: 30px">No tasks yet!</h2>
+            <span>You may want add one <a th:href="@{/task/ad/{id}(id=${project.getId()})}"><i class="bi-plus-circle" style="font-size: 1rem; color: forestgreen;"></i></a></span>
+        </div>
         <div th:case="*">
             <h2 style="margin-top: 30px" th:text="'Projektove ulohy(' + ${#lists.size(tasks)} + '):'"></h2>
             <table class="table table-striped">
@@ -65,6 +68,7 @@
                     <th>Zacatek</th>
                     <th>Konec</th>
                     <th>Status</th>
+                    <th>Info</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -79,7 +83,33 @@
                         <span th:if="${task.endDate} != null" th:text="${task.endDate.toLocalDate() + ' ' + task.endDate.toLocalTime()}"></span>
                         <span th:unless="${task.endDate != null}">-</span>
                     </td>
-                    <td th:text="${task.taskComplete()} ? 'Done' : 'Pending'"><td>
+<!--                    <td th:text="${task.taskComplete()} ? 'Done' : 'Pending'"><td>-->
+                    <td>
+                        <span th:if="${task.taskComplete() == true}">Done</span>
+                        <span th:unless="${task.taskComplete() == true}">Pending</span>
+                    </td>
+                    <td><a th:href="@{/task/detail/{id}(id=${task.getId()})}"><i class="bi-info-circle" style="font-size: 1rem; color: cornflowerblue;"></i></a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div th:switch="${#lists.size(invoices)}">
+        <div th:case="0">
+            <h2 style="margin-top: 30px">No invoices yet!</h2>
+            <span>You may want add one <a th:href="@{/invoice/ad/{id}(id=${project.getId()})}"><i class="bi-receipt" style="font-size: 1rem; color: purple;"></i></a></span>
+        </div>
+        <div th:case="*">
+            <h2 style="margin-top: 30px" th:text="'Projektove ulohy(' + ${#lists.size(invoices)} + '):'"></h2>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Nazev</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="invoice : ${invoices}">
+                    <td th:text="${invoice.project}"></td>
                 </tr>
                 </tbody>
             </table>
